History: Fix flickering when adding a page during load of component

--- a/src/clr-addons/history/history.scss
+++ b/src/clr-addons/history/history.scss
@@ -4,10 +4,6 @@
   .clr-history {
     margin-right: var(--cds-global-space-6);
   }
-  .history-container-pinned {
-    min-height: 20px;
-    float: left;
-  }
   .history-container {
     padding-left: 24px;
     margin-bottom: -6px;
